--- a/en/b/bend.6792.wikitext
+++ b/en/b/bend.6792.wikitext
@@ -13,21 +13,21 @@ From {{etyl|enm}} {{term|benden}} < {{etyl|ang}} {{term|bendan}} to bind or bend
 {{en-verb|bends|bending|bent}}
 
 # {{transitive}} To cause (something) to change its shape into a [[curve]], by [[physical]] [[force]], [[chemical]] action, or any other means.
-#* ''If you '''bend''' the pipe too far, it will break.''
-#* ''Don’t '''bend''' your knees.''
+#: ''If you '''bend''' the pipe too far, it will break.''
+#: ''Don’t '''bend''' your knees.''
 # {{transitive|intransitive}} To force or be forced to submit.
-#* "They '''bent''' me to their will."
-#* "I am '''bending''' to my desire to eat junk food."
+#: ''They '''bent''' me to their will.''
+#: ''I am '''bending''' to my desire to eat junk food.''
 # {{context|transitive|nautical}} To [[tie]], as in [[securing]] a line to a [[cleat]]; to [[shackle]] a [[chain]] to an [[anchor]]; make [[fast]].
-#* '''''Bend''' the sail to the yard.''
+#: '''''Bend''' the sail to the yard.''
 # {{context|transitive|music}} To smoothly change the pitch of a note.
-#* ''You should '''bend''' the G slightly sharp in the next measure.''
+#: ''You should '''bend''' the G slightly sharp in the next measure.''
 # {{context|intransitive|nautical}} To [[swing]] the [[body]] when [[rowing]].
 # {{intransitive}}  To become [[curve]]d.
-#* ''Look at the trees '''bending''' in the wind.''
-#* ''To bow properly, '''bend''' at the waist.''
+#: ''Look at the trees '''bending''' in the wind.''
+#: ''To bow properly, '''bend''' at the waist.''
 # {{intransitive}} To change direction.
-#* ''The road '''bends''' to the right''
+#: ''The road '''bends''' to the right''
 
 ====Derived terms====
 * [[bend down]]
