--- a/en/h/hold with the hare and run with the hounds.746718.wikitext
+++ b/en/h/hold with the hare and run with the hounds.746718.wikitext
@@ -1,11 +1,11 @@
 ==English==
 
-===Idiom===
-'''[[hold]] [[with]] [[the]] [[hare]] [[and]] [[run]] with the [[hound]]s'''
+===Verb===
+{{infl|en|verb|head=to [[hold]] [[with]] [[the]] [[hare]] [[and]] [[run]] with the [[hound]]s}}
 
-#{{context|idiom|dated}} To [[oppose]] an [[action]] or [[behavior]] and yet [[engage]] in the same action or behavior; to be a [[hypocrite]].
+#{{idiom|dated}} To [[oppose]] an [[action]] or [[behavior]] and yet [[engage]] in the same action or behavior; to be a [[hypocrite]].
 #: ''Well, if you ask me, Pastor Hawkins is trying to '''hold with the hare and run with the hounds''' by opposing casino gambling when his church operates a bingo game every Thursday night.''
-# {{context|idiom|dated}} To remain [[neutral]] by attempting to [[placate]] two [[faction]]s  or both sides of a [[controversy]]. 
+# {{idiom|dated}} To remain [[neutral]] by attempting to [[placate]] two [[faction]]s  or both sides of a [[controversy]]. 
 #: ''Julianna needs to be careful if she keeps '''holding with the hare and running with the hounds'''; she might wind up making enemies of both  labor and management.''
 
 ===Quotations===
@@ -15,6 +15,5 @@
 *:How happy is the man who knows really '''how to hold with the hare and run with the hounds'''! in other words, to be equally agreeable to both husband and wife.
 *'''1874''', [[w:C. H. Spurgeon|Charles Haddon Spurgeon]], ''[http://www.spurgeon.org/sermons/1185.htm An Earnest Warning on Lukewarmness]''.
 *:Thousands try '''to hold with the hare and run with the hounds''', they are for God and Mammon, Christ and Belial, truth and error, and so are "neither hot nor cold."
-
 *'''1967''', Robert Brainard Pearsall, "The Vendible Values of Housman's Soldiery", ''PMLA'', Vol. 82, No. 1 (March). 
 *:Thus Housman's uniformed creations move crookedly; they '''run with the hare and run with the hounds''', and their "meaning" is uncertain.
