--- a/en/h/hold with the hare and run with the hounds.746718.wikitext
+++ b/en/h/hold with the hare and run with the hounds.746718.wikitext
@@ -8,7 +8,7 @@
 # {{idiom|dated}} To remain [[neutral]] by attempting to [[placate]] two [[faction]]s  or both sides of a [[controversy]]. 
 #: ''Julianna needs to be careful if she keeps '''holding with the hare and running with the hounds'''; she might wind up making enemies of both  labor and management.''
 
-===Quotations===
+====Quotations====
 *'''1678''', [[w:John Bunyan|John Bunyan]], ''[[w:The Pilgrim's Progress|The Pilgrim's Progress from This World to That Which is to Come]]''.
 *:He can throw stones with both hands--can '''hold with the hare and run with the hounds'''--carry fire in one hand and water in the other.
 *'''1871''', Mary Elizabeth Braddon. ''Belgravia''
