--- a/en/y/yeah.4305.wikitext
+++ b/en/y/yeah.4305.wikitext
@@ -28,7 +28,7 @@
 * German: {{t+|de|ja}}
 * Hindi: [[हाँ]] (hā̃)
 * [[Interlingua]]: [[si#Interlingua|si]]
-* Italian: {{t+|it|si}}
+* Italian: {{t+|it|si}},  {{t|it|già}}
 {{trans-mid}}
 * Japanese: {{t|ja|うん|tr=un|sc=Jpan}},  {{t|ja|そう|tr=sō|sc=Jpan}},  {{t|ja|ええ|tr=ē|sc=Jpan}}
 * Polish: {{t+|pl|tak}}
