--- a/en/b/bamboo.746517.wikitext
+++ b/en/b/bamboo.746517.wikitext
@@ -23,6 +23,7 @@ From {{etyl|nl|en}} {{term|bamboe|lang=nl}}, from {{etyl|pt|en}} {{term|bambu|la
 * [[Acholi]]: [[koo#Acholi|koo]]
 * Albanian: {{t+|sq|bambu|xs=Albanian}}
 * Bengali: {{tø|bn|বাঁশ|tr=bāṁś|sc=Beng}}
+* Bulgarian: {{t|bg|бамбук|sc=Cyrl}}
 * Chinese traditional/simplified: [[竹材]],[[竹材]] (zhú cái)
 * Dutch: {{t+|nl|bamboe|n}}
 * Esperanto: {{t-|eo|bambuo|xs=Esperanto}}
@@ -53,6 +54,7 @@ From {{etyl|nl|en}} {{term|bamboe|lang=nl}}, from {{etyl|pt|en}} {{term|bambu|la
 
 {{trans-top|wood}}
 * Albanian: {{t+|sq|bambu|xs=Albanian}}
+* Bulgarian: {{t|bg|бамбук|sc=Cyrl}}
 * Chinese traditional/simplified: [[竹子]],[[竹子]] (zhú zi)
 * Dutch: {{t+|nl|bamboe|n}}
 * Finnish: {{t-|fi|bambu}}
@@ -87,6 +89,7 @@ The translations below need to be checked by native speakers and inserted into t
 
 ====Translations====
 {{trans-top|made of bamboo}}
+* Bulgarian: {{t|bg|бамбуков|sc=Cyrl}}
 * Chinese traditional/simplified: [[竹製]]的, [[竹製]]的 (zhú zhì de)
 * Dutch: bamboe-
 * Esperanto: [[bambua]]
