--- a/en/i/inculpate.741079.wikitext
+++ b/en/i/inculpate.741079.wikitext
@@ -8,6 +8,7 @@ From {{LL.}} ''[[inculpare]]''.
 
 # {{archaic}} To [[imply]] [[guilt]]; to [[incriminate]].
 
+[[cs:inculpate]]
 [[io:inculpate]]
 [[te:inculpate]]
 [[vi:inculpate]]
