--- a/en/a/adjustment.4313.wikitext
+++ b/en/a/adjustment.4313.wikitext
@@ -52,7 +52,7 @@
 * Swedish: {{t|sv|justering|c}}
 * [[Telugu]]: [[సర్దుబాటు]]
 * {{trreq|Tupinambá}}
-* {{trreq|Turkish}}
+* Turkish: {{t|tr|ayarlama}}
 * Welsh: {{t|cy|cyweiriad|m|xs=Welsh}}
 {{trans-bottom}}
 
