--- a/en/b/bent.6793.wikitext
+++ b/en/b/bent.6793.wikitext
@@ -31,6 +31,7 @@ From {{term|bend}}.
 
 =====Translations=====
 {{trans-top|folded}}
+* Bulgarian: {{t|bg|огънат|sc=Cyrl}}
 *Dutch: {{t+|nl|gebogen}}
 *Finnish: {{t|fi|taipunut}}, {{t|fi|taittunut}}
 *German: {{t-|de|gebeugt}}
@@ -42,9 +43,11 @@ From {{term|bend}}.
 
 {{trans-top|Homosexual}}
 {{trans-mid}}
+* Bulgarian: {{t|bg|педерастки|sc=Cyrl}}
 {{trans-bottom}}
 
 {{trans-top|Determined or insistent}}
+* Bulgarian: {{t|bg|склонен|sc=Cyrl}}
 *Dutch: {{t|nl|met de zinnen gezet op}}
 {{trans-mid}}
 {{trans-bottom}}
@@ -62,11 +65,13 @@ From {{term|bend}}.
 
 =====Translations=====
 {{trans-top|inclination or talent}}
+* Bulgarian: {{t|bg|влечение|n|sc=Cyrl}}
 * Dutch: {{t+|nl|aanleg|m}}
 {{trans-mid}}
 {{trans-bottom}}
 
 {{trans-top|predisposition}}
+* Bulgarian: {{t|bg|склонност|f|sc=Cyrl}}
 * Dutch: {{t+|nl|aanleg|m}}
 {{trans-mid}}
 {{trans-bottom}}
