--- a/en/a/American English.34094.wikitext
+++ b/en/a/American English.34094.wikitext
@@ -5,7 +5,7 @@
 * [[American-English]] {{qualifier|esp. adjective}}
 
 ===Etymology===
-1806 (US), {{compound|American|English}}.  As an adjective, 1892.
+1806 (US).  As an adjective, 1892.
 
 ===Proper noun===
 {{en-proper noun|sg=[[American]] [[English]]}}
