--- a/en/d/division.26256.wikitext
+++ b/en/d/division.26256.wikitext
@@ -121,6 +121,7 @@ From Latin ''[[divisio]]'', noun of process form from perfect passive participle
 * Esperanto: [[divizio]]
 * Finnish: {{t-|fi|divisioona}}
 * German: {{t+|de|Abteilung|f}}, {{t+|de|Division|f}}
+* Greek: {{t|el|μεραρχία|f|tr=merarchia|sc=Grek}}
 * Hebrew: [[אוגדה]] (ugda) {{f}}
 * Kurdish: {{ku-Arab|[[فرقه‌]]}}
 {{trans-mid}}
