--- a/en/b/badger.8231.wikitext
+++ b/en/b/badger.8231.wikitext
@@ -91,12 +91,7 @@
 * [[West Frisian]]: [[das]] {{c}}
 {{trans-bottom}}
 
-{{trans-top|native of Wisconsin}}
-* French: [[habitant]] {{m}} du Wisconsin
-* Italian: [[abitante]] {{m}} dello Wisconsin
-{{trans-mid}}
-* [[Macedonian]]: {{t|mk|Висконсинец|m|tr=Viskónsinec|sc=Cyrl|xs=Macedonian}},  {{t|mk|Висконсинка|f|tr=Viskónsinka|sc=Cyrl|xs=Macedonian}}
-{{trans-bottom}}
+{{trans-see|person from Wisconsin|Wisconsinite}}
 
 =====See also=====
 * [[sett]], [[set]]
