--- a/en/w/West Frisian.741118.wikitext
+++ b/en/w/West Frisian.741118.wikitext
@@ -16,6 +16,7 @@ Some linguists consider West Frisian, Saterland Frisian, and North Frisian to be
 * Chinese:
 *: Mandarin: {{zh-ts|弗里西亞語|弗里西亚语}} ([[fú]][[lǐ]][[xī]][[yà]] [[yǔ]])
 * Dutch: {{t+|nl|Fries|n}}, {{t|nl|Westerlauwers Fries|n}}
+* Esperanto: {{t|eo|okcidentfrisa lingvo}}
 * Finnish: {{t|fi|länsifriisi}}
 * German: {{t+|de|Friesisch|n}}
 {{trans-mid}}
@@ -38,7 +39,6 @@ Some linguists consider West Frisian, Saterland Frisian, and North Frisian to be
 
 {{checktrans}}
 Please distinguish between the Frisian language group, the West Frisian language (sometimes known as "Frisian"), and the West Frisian dialect.
-* {{ttbc|Esperanto}}: [[frizona]]
 * {{ttbc|French}}: [[frison]] {{m}}
 * {{ttbc|Icelandic}}: [[frísneska]] {{f}}
 * {{ttbc|Spanish}}: [[frisón]] {{m}}
