--- a/en/b/blow.6803.wikitext
+++ b/en/b/blow.6803.wikitext
@@ -1,14 +1,14 @@
 ==English==
 {{wikipedia|dab=Blow}}
 
-===Etymology 1===
-From {{etyl|ang|en}} {{term|blawan|blāwan|make an air current, sound a wind instrument|lang=ang}} from {{proto|Germanic|blæanan}} from {{proto|Indo-European|bhle-}} "to swell, blow up".
-
-====Pronunciation====
+===Pronunciation===
 * {{a|UK}} {{IPA|/bləʊ/}}, {{SAMPA|/"bl@U/}}
 *: {{rhymes|əʊ}}
 * {{a|US}} {{IPA|/bloʊ/}}, {{SAMPA|/'bloU/}}
 *: {{audio|en-us-blow.ogg|Audio (US)}}
+
+===Etymology 1===
+From {{etyl|ang|en}} {{term|blawan|blāwan|make an air current, sound a wind instrument|lang=ang}} from {{proto|Germanic|blæanan}} from {{proto|Indo-European|bhle-}} "to swell, blow up".
 
 ====Verb====
 {{en-verb|blows|blowing|'''[[blew]]''' or (''dialect'') '''[[blowed]]'''|'''[[blown]]''' or (''dialect'') '''[[blowed]]'''}}
