--- a/en/b/break.6806.wikitext
+++ b/en/b/break.6806.wikitext
@@ -120,7 +120,7 @@ The sense relating to a spell of weather is most likely to be used after a perio
 {{trans-top|intransitive: to end up in two or more pieces that cannot easily be reassembled}}
 * Arabic: {{Arab|[[كسر]]}} (kásara), {{Arab|انكسر}} (inkásara)
 * Armenian: [[ջարդվել]] (ǰardvel), [[կոտրվել]] (kotərvel)
-* {{trreq|Basque}}
+* [[Basque]]: {{t|eu|puskatu}},  {{t|eu|hautsi}}
 * Bulgarian: {{t|bg|чупя се}}
 * Chinese: [[打破]] (dǎpò)
 * Czech: {{t-|cs|rozbít}} se, {{t-|cs|zlomit}} se
