--- a/en/י/ישראל.4258.wikitext
+++ b/en/י/ישראל.4258.wikitext
@@ -10,6 +10,7 @@
 # the [[patriarch]] [[Israel]]
 # the [[child|children]] of [[Israel]], the [[Jewish]] [[people]]
 # the [[state]] of [[Israel]], both [[ancient]] and [[modern]]
+# {{given name|male|lang=he}}, [[Israel]]
 
 ====Related terms====
 * [[ארץ ישראל|אֶרֶץ יִשְׂרָאֵל]]<!--x-->
