--- a/en/1/1 Maccabees.801820.wikitext
+++ b/en/1/1 Maccabees.801820.wikitext
@@ -3,7 +3,10 @@
 
 ===Proper noun===
 {{en-proper-noun}}
+
 # {{biblical}}  The first book of [[Maccabees]] of the [[Old Testament]] [[Apocrypha]].
 
 ====Related terms====
 *[[1 Macc.]]
+
+[[Category:English terms spelled with 1]]
