--- a/en/2/2 Macc_.801827.wikitext
+++ b/en/2/2 Macc_.801827.wikitext
@@ -1,6 +1,9 @@
 ==English==
+
 ==={{abbreviation}}===
 {{infl|en|abbreviation}}
+
 # {{biblical}} An abbreviation used for [[2 Maccabees]] of the [[Old Testament]] [[Apocrypha]].
 
 [[Category:Books of the Bible]]
+[[Category:English terms spelled with 2]]
