--- a/en/2/2 Maccabees.801821.wikitext
+++ b/en/2/2 Maccabees.801821.wikitext
@@ -3,7 +3,10 @@
 
 ===Proper noun===
 {{en-proper-noun}}
+
 # {{biblical}}  The second book of [[Maccabees]] of the [[Old Testament]] [[Apocrypha]].
 
 ====Related terms====
 *[[2 Macc.]]
+
+[[Category:English terms spelled with 2]]
