--- a/en/a/at the end of one's tether.776810.wikitext
+++ b/en/a/at the end of one's tether.776810.wikitext
@@ -1,5 +1,8 @@
 ==English==
 
+===Alternative forms===
+* [[at the end of one's rope]]
+
 ===Adjective===
 {{infl|en|adjective|head=[[at]] [[the]] [[end]] [[of]] [[one]][['s|’s]] [[tether]]}}
 
