--- a/en/m/minimum.34064.wikitext
+++ b/en/m/minimum.34064.wikitext
@@ -105,6 +105,7 @@ From {{etyl|la|en}} {{term|minimus||lang=la|least, smallest}}
 [[fr:minimum]]
 [[io:minimum]]
 [[it:minimum]]
+[[kn:minimum]]
 [[kk:minimum]]
 [[lt:minimum]]
 [[hu:minimum]]
