--- a/en/b/break.6806.wikitext
+++ b/en/b/break.6806.wikitext
@@ -147,7 +147,7 @@ The sense relating to a spell of weather is most likely to be used after a perio
 * Lithuanian: [[sulaužyti]]
 * Mongolian: {{t|mn|хагарах|tr=hagarah|sc=Cyrl|xs=Mongolian}}
 * {{trreq|Old English}}
-* Persian: {{t|fa|خرد کردن|xs=Persian}}
+* Persian: {{t|fa|خرد کردن|tr=xord kardan|xs=Persian}}, {{t|fa|شکستن|tr=šekastan}}
 * Polish: [[złamać się]] (two pieces), [[rozbić się]], [[połamać się]] (more pieces)
 * Portuguese: [[quebrar]], [[partir]], [[romper]] (if flexible material)
 * Romanian: a (se) [[frânge]], a (se) [[rupe]]
@@ -183,6 +183,7 @@ The sense relating to a spell of weather is most likely to be used after a perio
 * Romanian: a (se) [[frânge]]
 * Russian: {{t+|ru|ломаться|tr=lomát’s’a}} {{impf}}, {{t|ru|сломаться|tr=slomát’s’a}} {{pf}}
 * Slovene: [[zlomiti se]]
+* Spanish: {{t|es|romper}}
 * Swedish: [[brytas]]
 {{trans-bottom}}
 
@@ -207,6 +208,7 @@ The sense relating to a spell of weather is most likely to be used after a perio
 * Romanian: [[frânge]]
 * Russian: {{t+|ru|ломать|tr=lomát’}} {{impf}}, {{t|ru|сломать|tr=slomát’}} {{pf}}
 * Slovene: {{t+|sl|zlomiti}}
+* Spanish: {{t|es|romper}}
 * Swedish: {{t+|sv|bryta}}
 {{trans-bottom}}
 
@@ -229,6 +231,7 @@ The sense relating to a spell of weather is most likely to be used after a perio
 * Portuguese: {{t+|pt|quebrar}}, {{t+|pt|partir}}
 * Russian: {{t+|ru|ломать|tr=lomát’}} {{impf}}, {{t|ru|сломать|tr=slomát’}} {{pf}}
 * Slovene: {{t+|sl|zlomiti}}
+* Spanish: {{t|es|romper}}
 * Swedish: {{t+|sv|bryta}}
 {{trans-bottom}}
 
@@ -325,7 +328,7 @@ The sense relating to a spell of weather is most likely to be used after a perio
 * {{trreq|Lithuanian}}
 * {{trreq|Mongolian}}
 * {{trreq|Old English}}
-* {{trreq|Persian}}
+* Persian: {{t|fa|شکستن|tr=šekastan}}
 * Portuguese: [[quebrar]], [[partir]], [[romper]] (if flexible)
 * Romanian: [[rupe]], [[frânge]]
 * Russian: {{t|ru|разбивать|tr=razbivát’}} {{impf}}, {{t|ru|разбить|tr=razbít’}} {{pf}}
@@ -399,6 +402,7 @@ The sense relating to a spell of weather is most likely to be used after a perio
 * Japanese: [[破る]] (yaburu), [[犯す]] (okasu)
 * Korean: [[깨다]] (kkaeda)
 * Latvian: {{t-|lv|pārkāpt|xs=Latvian}}
+* Persian: {{t|fa|شکستن|tr=šekastan}}
 * Portuguese: {{t+|pt|desrespeitar}}, {{t+|pt|violar}}
 * Russian: {{t|ru|нарушать|tr=narušát’}} {{impf}}, {{t|ru|нарушить|tr=narúšit’}} {{pf}}
 * Slovene: [[prekršiti]]
@@ -411,6 +415,7 @@ The sense relating to a spell of weather is most likely to be used after a perio
 * Finnish: {{t+|fi|murtua}}
 {{trans-mid}}
 * Icelandic: {{t|is|brotna}}
+* Spanish: {{t|es|romper}}
 * Swedish: {{t+|sv|bryta}}
 {{trans-bottom}}
 
@@ -431,6 +436,7 @@ The sense relating to a spell of weather is most likely to be used after a perio
 * Finnish: {{t-|fi|hellittää}}
 {{trans-mid}}
 * Latvian: {{t-|lv|beigties|xs=Latvian}}
+* Spanish: {{t|es|cambiar}}
 {{trans-bottom}}
 
 {{trans-top|to ruin financially}}
@@ -442,6 +448,7 @@ The sense relating to a spell of weather is most likely to be used after a perio
 * Bulgarian: {{t|bg|разбивам}}
 {{trans-mid}}
 * Finnish: {{t+|fi|jakaa}}; {{t+|fi|särkeä}} (''of money'')
+* Persian: {{t|fa|خرد کردن|tr=xord kardan|xs=Persian}}
 {{trans-bottom}}
 
 {{trans-top|of dawn, to arrive}}
@@ -454,7 +461,6 @@ The sense relating to a spell of weather is most likely to be used after a perio
 * {{ttbc|Chumash (Inezeño)}}: [[kʼot]]
 * {{ttbc|Indonesian}}: [[pecah|memecah]], [[pecah|memecahkan]], [[rusak|merusak]]
 * {{ttbc|Latin}}: [[rumpere]], [[frangere]]
-* {{ttbc|Spanish}}: [[romper#Spanish|romper]]
 {{trans-bottom}}
 
 ===Noun===
