--- a/en/m/moonstone.720226.wikitext
+++ b/en/m/moonstone.720226.wikitext
@@ -9,7 +9,7 @@
 
 ====Translations====
 {{trans-top|translucent gemstone}}
-* {{trreq|Arabic}}
+* Arabic: {{t|ar|حجر القمر|m|tr=Hajar al-qamr|sc=Arab}}
 * Chinese:
 ** Mandarin: {{t-|cmn|月長石|sc=Hani}}, {{t-|cmn|月长石|tr=yuèzhǎngshí|sc=Hani}} (or yuèchángshí)
 * Czech: {{t|cs|měsíček}}
