--- a/en/b/bamboo.746517.wikitext
+++ b/en/b/bamboo.746517.wikitext
@@ -148,6 +148,7 @@ The translations below need to be checked by native speakers and inserted into t
 [[fa:bamboo]]
 [[fr:bamboo]]
 [[io:bamboo]]
+[[kn:bamboo]]
 [[lo:bamboo]]
 [[hu:bamboo]]
 [[ml:bamboo]]
