--- a/en/r/rabbit.8241.wikitext
+++ b/en/r/rabbit.8241.wikitext
@@ -11,7 +11,7 @@
 * Homophones: [[rabbet]]
 
 ===Etymology 1===
-{{etyl|enm}} ''[[rabet#Middle English|rabet]]'' from {{etyl|fro}} *''rabot'' (cf [[French]] dialect ''[[rabotte]]'' 'rabbit',  {{etyl|wa|-}} ''[[robète]]'' 'young cony') of {{etyl|gem}} origin, from {{etyl|odt}} ''[[robbe#Old Dutch|robbe]]'' ({{etyl|vls|-}} ''[[robbe#Flemish|robbe]]'' 'rabbit', {{etyl|nld|-}} ''[[rob#Dutch|rob]]'' 'rabbit'). Akin to {{etyl|nds|-}} ''[[robbe#Low German|robbe]]'' 'seal, sea-dog'.
+{{etyl|enm}} ''[[rabet#Middle English|rabet]]'', from {{etyl|frm}} dialect (cf. {{etyl|fr}} dialect ''[[rabbotte]]'', ''[[rabouillet]]''), from {{etyl|wa|-}} ''[[robète]]'' 'baby rabbit', diminutive of {{etyl|dum}} ''[[robbe#Middle Dutch|robbe]]'' 'docked; rabbit, dogfish' (cf. {{etyl|vls|-}} ''[[robbe#Flemish|robbe]]'' 'rabbit', {{etyl|nld|-}} dial. ''[[rob#Dutch|rob]]'' 'id.'); akin to [[Low German]] ''[[Robbe#Low German|Robbe]]'' 'seal, sea-dog'.
 
 ====Noun====
 {{en-noun}}
