--- a/en/b/blow.6803.wikitext
+++ b/en/b/blow.6803.wikitext
@@ -348,12 +348,13 @@ From {{etyl|ang|en}} {{term|blawan|blāwan|make an air current, sound a wind ins
 * Armenian: {{t-|hy|հարված|tr=harvaç}}
 * Bulgarian: {{t+|bg|удар|m}}
 * Dutch: {{t+|nl|slag|m}}
-* Esperanto: {{t-|eo|bato|xs=Esperanto}}
+* Esperanto: {{t-|eo|bato|xs=Esperanto}},  {{t|eo|frapo}}
 * Finnish: {{t+|fi|isku}}
 * French: {{t+|fr|coup|m}}
 * German: {{t+|de|Schlag|m}}
 {{trans-mid}}
 * Hungarian: {{t+|hu|csapás}}
+* [[Ido]]: {{t|io|frapo}}
 * Italian: {{t+|it|botta|f}},  {{t+|it|colpo|m}}
 * [[Macedonian]]: {{t-|mk|удар|m|tr=údar}}
 * Russian: {{t+|ru|удар|m|tr=udár}}
