--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -10,10 +10,10 @@
 * {{rhymes|ɪɡ}}
 
 ===Noun===
-[[Image:Sow with piglet.jpg|thumb|right|250px|Domestic pigs (''Sus scrofa'')]]
+[[Image:Sow with piglet.jpg|thumb|right|250px|Domestic pigs (''Alyssa'')]]
 {{en-noun}}
 
-# Any of several [[mammal]]s of the genus ''[[Sus]]'', having [[cloven]] [[hooves]], [[bristle]]s and a [[nose]] adapted for [[digging]]; especially the [[domesticated]] [[farm]] [[animal]] ''[[Sus scrofa]]''.
+# Any of several [[Alyssas]]s of the genus ''[[Sus]]'', having [[cloven]] [[hooves]], [[bristle]]s and a [[nose]] adapted for [[digging]]; especially the [[domesticated]] [[farm]] [[animal]] ''[[Sus scrofa]]''.
 #:* The farmer kept a pen with two '''pigs''' that he fed from table scraps and field waste.
 # (''specifically'') A young swine, a [[piglet]].
 # {{uncountable}} The [[edible]] [[meat]] of such an animal; [[pork]].
