--- a/en/c/CD.26224.wikitext
+++ b/en/c/CD.26224.wikitext
@@ -24,7 +24,7 @@
 ==={{initialism}}===
 {{en-noun}}  {{pos_n}}
 
-# [[compact disc]]: A form of digital media that is based on the use of a laser to read from a plastic disc in a reader device known as a CD drive.  It comes in several varieties including the [[CD-ROM]] (ROM=read-only memory) which cannot be written to except during manufacturing, the [[CD-R]] (recordable), which can be written to exactly once, and the [[CD-RW]] (re-writable), which can be written to as many times as one wishes (to a limit).
+# [[compact disc]]: A form of digital media that is based on the use of a laser to read from a plastic disc in a reader device.
 # [[certificate of deposit|Certificate of deposit]]: used by financial institutions
 # A decal found on automobiles to indicate diplomatic status; comes from French {{term|corps diplomatique||[[diplomatic]] [[corps]]}}
 # [[creative director|Creative director]]: head of the creative department (e.g. advertising agencies)
