--- a/en/a/aeq_.802819.wikitext
+++ b/en/a/aeq_.802819.wikitext
@@ -3,7 +3,7 @@
 ===Etymology===
 From {{etyl|la|mul}} {{term|aequalis|lang=la}}
 
-==={{abbreviation}}===
+==={{abbreviation|mul}}===
 {{infl|mul|abbreviation}}
 
 # [[equal]]
