--- a/en/b/bend.6792.wikitext
+++ b/en/b/bend.6792.wikitext
@@ -166,6 +166,7 @@ From {{etyl|enm}} {{term|benden}} < {{etyl|ang}} {{term|bendan}} to bind or bend
 * German: {{t+|de|Kurve|f}}
 {{trans-mid}}
 * Portuguese: {{t+|pt|curva|f}}
+* [[Scottish Gaelic]]: {{t|gd|bogha|f}}
 * Slovene: {{t-|sl|zavoj|m}}
 * Swahili: {{t+|sw|pinda|xs=Swahili}}
 {{trans-bottom}}
