--- a/en/t/trick out.774631.wikitext
+++ b/en/t/trick out.774631.wikitext
@@ -4,7 +4,7 @@
 ===Verb===
 {{en-verb|inf=[[trick]] [[out]]|tricks out|tricking out|tricked out}}
 
-# {{transitive}}{{slang}} '''to trick out'''; to [[mod]] or customize an object, typically for the purpose of both personalization as well as enhancing the object's performance capabilities and more particularly for the purpose of performing stunts with that object.
+# {{transitive|slang}} To [[mod]] or [[customize]] an object, typically for the purposes of [[personalization]] and enhancing [[performance]] capabilities such as the ability to perform [[stunt]]s.
 #: ''His friends were particularly impressed with the way he '''tricked out''' his scooter.''
 
 ====Derived terms====
