--- a/en/t/then.7353.wikitext
+++ b/en/t/then.7353.wikitext
@@ -146,6 +146,7 @@
 * Portuguese: [[então]], [[nesse]] [[caso]]
 * Romanian: {{t+|ro|atunci}}
 * Russian: {{t+|ru|тогда|tr=togdá}}
+* [[Scottish Gaelic]]: {{t|gd|ma-thà}}
 * Spanish: {{t+|es|entonces}}
 * Swedish: [[alltså]], [[då]], [[i så fall]]
 {{trans-bottom}}
