--- a/en/t/though.7361.wikitext
+++ b/en/t/though.7361.wikitext
@@ -24,7 +24,7 @@
 # {{context|conjunctive}} [[despite|Despite]] that; [[however]].
 #: ''I will do it, '''though'''.''
 # {{context|degree}} Used to intensify statements or questions; [[indeed]].
-#: ''"God, it's hot in here." — "Isn't it, '''though'''?"''
+#: ''"Man, it's hot in here." — "Isn't it, '''though'''?"''
 
 ====Synonyms====
 * {{sense|despite that}} [[all the same]], [[anyhow]], [[anyway]], [[even so]], [[in any case]], [[nevertheless]], [[nonetheless]], [[still]], [[yet]]
