--- a/en/c/cauliflower.34088.wikitext
+++ b/en/c/cauliflower.34088.wikitext
@@ -26,10 +26,11 @@
 *: Mandarin: {{t|cmn|花椰菜|tr=huāyēcài|sc=Hani}},  {{t|cmn|菜花|tr=càihuā|sc=Hani}}
 * Czech: {{t-|cs|květák|m}}, {{t-|cs|karfiól|m}}
 * Dutch: {{t+|nl|bloemkool}}
+* Esperanto: {{t|eo|florbrasiko}}
 * Finnish: {{t+|fi|kukkakaali}}
 * French: {{t+|fr|chou-fleur|m}}
-* German: {{t+|de|Blumenkohl|m}},  ''(Austrian:)'' {{t|de|Karfiol|m}}
 {{trans-mid}}
+* German: {{t+|de|Blumenkohl|m}},  ''(Austrian:)'' {{t|de|Karfiol|m}}
 * Greek: {{t+|el|κουνουπίδι|n|tr=kunupídi}}
 * Hungarian: {{t+|hu|karfiol}}
 * [[Ido]]: {{t|io|florkaulo}}
