--- a/en/p/pledge.7357.wikitext
+++ b/en/p/pledge.7357.wikitext
@@ -63,12 +63,13 @@ From {{etyl|enm}} ''[[plege#Middle English|plege]]'' from {{etyl|xno}} ''[[plege
 * Italian: {{t+|it|giuramento|m}}, {{t+|it|pegno|m}}, {{t-|it|promessa solenne|f}}
 * Japanese: [[抵当]] (ていとう, teitō)
 * Korean: [[서약]] (seoyak)
-{{trans-mid}}
 * Kurdish:
 *: Sorani: {{t|ku|په‌یمان|tr=paymAn|sc=ku-Arab}}
+{{trans-mid}}
 * Polish: {{t+|pl|obietnica|f}}
 * Portuguese: {{t+|pt|promessa|f}}, {{t+|pt|penhor|m}}
 * Russian: {{t+|ru|обет|m}}, {{t+|ru|обещание|n}}, {{t+|ru|зарок|m}}
+* [[Scottish Gaelic]]: {{t|gd|gealltanas|m}}
 * Serbian: {{t-|sr|zavet|m}}
 * Slovene: [[zaprisega]] {{f}}, [[zaobljuba]] {{f}}
 * Spanish: [[juramento]] {{m}}, [[promesa]] [[solemne]] {{f}}
