--- a/en/i/in the know.742284.wikitext
+++ b/en/i/in the know.742284.wikitext
@@ -25,7 +25,7 @@
 * {{trreq|Danish}}
 * {{trreq|Dutch}}
 * {{trreq|Estonian}}
-* {{trreq|Finnish}}
+* Finnish: {{t|fi|tietävä}}
 * French: {{t+|fr|au courant}}
 * {{trreq|German}}
 * {{trreq|Hindi}}
