--- a/en/m/mill.4306.wikitext
+++ b/en/m/mill.4306.wikitext
@@ -178,6 +178,7 @@ From the noun ''mill''
 {{trans-mid}}
 * Polish: {{t+|pl|mleć}}
 * Portuguese: {{t+|pt|moer}}
+* Romanian: {{t|ro|măcina}}
 * Russian: {{t|ru|молоть|tr=molót'}} {{impf}}, {{t|ru|смолоть|tr=smolót'}} {{pf}}
 {{trans-bottom}}
 
