--- a/en/c/cauliflower.34088.wikitext
+++ b/en/c/cauliflower.34088.wikitext
@@ -40,7 +40,7 @@
 * [[Ido]]: {{t+|io|florkaulo|xs=Ido}}
 * Indonesian: {{t-|id|blumkol|xs=Indonesian}}
 * Japanese: {{t-|ja|カリフラワー|tr=karifurawā}}
-* {{trreq|Korean}}
+* Korean: {{t|ko|꽃양배추 (kkotyangbaechu)|sc=Kore}}
 * [[Macedonian]]: {{t-|mk|карфиол|m|tr=karfiól}}
 * Navajo: {{tø|nv|chʼil łigaii}}
 * {{trreq|Persian}}
