--- a/en/i/inculpate.741079.wikitext
+++ b/en/i/inculpate.741079.wikitext
@@ -10,6 +10,7 @@ From {{etyl|LL.}} ''[[inculpare]]''.
 
 [[cs:inculpate]]
 [[io:inculpate]]
+[[kn:inculpate]]
 [[te:inculpate]]
 [[vi:inculpate]]
 [[zh:inculpate]]
