--- a/en/c/cop.26062.wikitext
+++ b/en/c/cop.26062.wikitext
@@ -42,7 +42,7 @@ Sometimes explained as deriving from copper buttons or badges of early [[NYPD]] 
 {{trans-top|police officer}}
 * Bulgarian: {{t|bg|полицай|m}},  {{t|bg|ченге|n}}
 * Finnish: {{t+|fi|pollari}},  {{t+|fi|kyttä}}
-* French: {{t+|fr|flic|m}}, {{t+|fr|keuf|m}}
+* French: {{t+|fr|flic|m}}, {{t+|fr|keuf|m}},  {{t|fr|poulet|m}}
 * Hebrew: {{t+|he|שוטר|m|tr=shotér}},  {{t|he|שוטרת|f|tr=shotéret}}
 * Hungarian: {{t-|hu|zsaru}}
 * Norwegian: {{t+|no|purk|m}}
