--- a/en/c/cop.26062.wikitext
+++ b/en/c/cop.26062.wikitext
@@ -46,9 +46,9 @@ Sometimes explained as deriving from copper buttons or badges of early [[NYPD]] 
 * Hebrew: {{t+|he|שוטר|m|tr=shotér}},  {{t|he|שוטרת|f|tr=shotéret}}
 * Hungarian: {{t-|hu|zsaru}}
 * Norwegian: {{t+|no|purk|m}}
-{{trans-mid}}
 * Polish: {{t+|pl|gliniarz|m}}, {{t+|pl|glina|m}}
-* Russian: {{t|ru|коп|m|tr=kop}} {{qualifier|American}}, {{t+|ru|мент|m|tr=ment}} {{qualifier|offensive}}, {{t+|ru|мусор|m|tr=músor}} {{qualifier|more offensive}},   {{t|ru|фараон|m|tr=faraón|sc=Cyrl}} {{qualifier|slang, dated}}
+{{trans-mid}}
+* Russian: {{t|ru|коп|m|tr=kop}} {{qualifier|American}}, {{t+|ru|мент|m|tr=ment}} {{qualifier|offensive}}, {{t+|ru|мусор|m|tr=músor}} {{qualifier|more offensive}},   {{t|ru|фараон|m|tr=faraón|sc=Cyrl}} {{qualifier|slang, dated}},  {{t|ru|лягавый|m|tr=ljagávyj|sc=Cyrl}},  {{t|ru|легавый|tr=legávyj|sc=Cyrl}}
 * Slovak: [[poliš]] {{m}}, [[hekáč]] {{m}}
 * Spanish: {{t-|es|tombo|m}}, {{t+|es|paco|m}}
 * Swedish: {{t+|sv|snut}}
