--- a/en/m/multiplication.26254.wikitext
+++ b/en/m/multiplication.26254.wikitext
@@ -23,7 +23,7 @@ When applied to whole numbers, multiplication can be considered as repeated addi
 * Finnish: {{t+|fi|kertolasku}}
 * French: {{t+|fr|multiplication|f}}
 * German: {{t+|de|Multiplikation|f}}
-* Greek: {{t+|el|πολλαπλασιασμός}}
+* Greek: {{t|el|πολλαπλασιασμός|m|tr=pollaplasiasmós}}
 {{trans-mid}}
 * Italian: {{t+|it|moltiplicazione|f}}
 * Japanese: [[掛け算]] (かけざん, kakezan), [[乗法]] (じょうほう, jōhō)
