--- a/en/m/multiplication.26254.wikitext
+++ b/en/m/multiplication.26254.wikitext
@@ -39,6 +39,7 @@ When applied to whole numbers, multiplication can be considered as repeated addi
 
 {{trans-top|calculation}}
 * Dutch: {{t|nl|vermenigvuldiging|f}}
+* Greek: {{t|el|πολλαπλασιασμός|m|tr=pollaplasiasmós}}
 {{trans-mid}}
 * Swedish: {{t+|sv|multiplikation|c}}
 {{trans-bottom}}
