--- a/en/p/PTO.26209.wikitext
+++ b/en/p/PTO.26209.wikitext
@@ -10,7 +10,7 @@
 # Paid Time Off
 # [[power take-off]], a powered shaft for driving auxiliary equipment.
 # Parent Teacher Organization, Parent Teacher Organisation
-# Police turn over
+# Police Turn Over
 
 ===Abbreviation===
 '''[[please]] [[turn]] [[over]]''' 
