--- a/en/b/break.6806.wikitext
+++ b/en/b/break.6806.wikitext
@@ -481,6 +481,8 @@ The sense relating to a spell of weather is most likely to be used after a perio
 #: ''The sun came out in a '''break''' in the clouds.''
 # A [[rest]] or [[pause]], usually from [[work]]; a [[breaktime]].
 #: ''Let’s take a five-minute '''break'''.''
+# An abrupt change in the normal flow of a process.
+#: ''He waiting minutes for a '''break''' in the traffic to cross the highway.''
 # {{context|by ellipsis}} A [[lucky break]].
 # {{tennis}} A [[game]] won by the [[receive|receiving]] [[player]](s).
 # {{billiards|snooker|pool}} The first [[shot]] in a game of [[billiards]]
