--- a/en/c/CD.26224.wikitext
+++ b/en/c/CD.26224.wikitext
@@ -38,7 +38,7 @@
 {{trans-top|abbreviations of compact-disc actually in use, for full term see [[compact disc]]}}
 * Arabic: {{t-|ar|CD|m|tr=sii dii}}
 * Chinese:
-*: Mandarin: {{t-|cmn|CD|tr=sìdì|sc=Hani}}
+*: Mandarin: {{t-|cmn|CD|tr=sìdì|sc=Hani}},  {{t|zh|光盤|sc=Hani}},  {{t|zh|光盘|tr=guāngpán|sc=Hani}},  {{t|zh|光碟|tr=guāngdié|sc=Hani}}
 * Dutch: {{t+|nl|cd|m}} (lower case)
 * Finnish: {{t+|fi|CD}}
 * French: {{t+|fr|CD|m}}
