--- a/en/i/Ionia.775850.wikitext
+++ b/en/i/Ionia.775850.wikitext
@@ -9,4 +9,5 @@ From {{etyl|grc}} '''[[Ἰωνία]]'''.
 
 # {{historical}} An Ancient Greek settlement on the west coast of [[Asia Minor]] inhabited by the [[Ionian]]s, one of the four main [[Hellenic]] tribes.
 
+[[fr:Ionia]]
 [[fi:Ionia]]
