--- a/en/b/badger.8231.wikitext
+++ b/en/b/badger.8231.wikitext
@@ -131,7 +131,7 @@ From {{etyl|enm}} {{term|bageard||marked by a badge|lang=enm}}, from {{term|bage
 * German: {{t+|de|belästigen}}, {{t+|de|plagen}}, {{t+|de|piesacken}}
 * Greek: {{t+|el|ταράζω}}, {{t+|el|ζαλίζω}}
 * Russian: {{t|ru|дразнить}}
-* Spanish: {{t|es|fastidiar, molestar}}
+* Spanish: {{t|es|fastidiar}}, {{t|es|molestar}}
 * [[Tok Pisin]]: [[bagarapim]] [[sindaun]] bilong<!-- if these words make up a single idiom, they should be wikified as a single entity-->
 {{trans-bottom}}
 
