--- a/en/b/bind.6798.wikitext
+++ b/en/b/bind.6798.wikitext
@@ -58,6 +58,7 @@ From {{etyl|ang}} ''[[bindan]]'', from {{proto|Germanic|benđanan}} (cf. West Fr
 {{trans-mid}}
 * Czech: {{t-|cs|svázat}}
 * Esperanto: {{t-|eo|bindi|xs=Esperanto}}
+* Portuguese: {{t|pt|encapar}}
 {{trans-bottom}}
 
 ====Derived terms====
