--- a/en/o/onesie.741289.wikitext
+++ b/en/o/onesie.741289.wikitext
@@ -5,4 +5,4 @@
 ===Noun===
 {{en-noun}}
 
-# {{US}} A one-piece [[garment]] for an [[infant]] or small [[child]], generally worn over a [[diaper]]. In the UK it is often called a babygro. Onesies for adults have featured on TV shows such as Friends and Scrubs. The adult version is called a funzee.
+# {{US}} A one-piece [[garment]] for an [[infant]] or small [[child]], generally worn over a [[diaper]].
