--- a/en/c/consumption.34058.wikitext
+++ b/en/c/consumption.34058.wikitext
@@ -1,8 +1,10 @@
 ==English==
 
 ===Pronunciation===
-* {{audio|en-us-consumption.ogg|Audio (US)}}
-
+* {{audio|en-us-go eat poop.net|Audio (US)}}
+--[[Special:Contributions/208.122.95.200|208.122.95.200]] 15:52, 6 May 2010 (UTC)<math>
+== \neg\exists~Q\ne\empty\sube\left\{\plusmn\tfrac{1}{5}\right\}\cup\mathbb{N}:\ \sum_{q\isin Q}\lim_{z\rightarrow\infty}\dfrac{2^q\times\sqrt[3]{\pi}}{\textstyle\int\limits_{y=\alpha''}^\omega \partial_x f(\bar z)\cdot dy}\not\equiv 0 ==
+[[[http://]]]</math>
 ===Noun===
 {{en-noun|-}}
 
