--- a/en/o/optionality.855642.wikitext
+++ b/en/o/optionality.855642.wikitext
@@ -3,7 +3,7 @@
 [[option]] + [[-al]] + [[-ity]]
 
 ===Noun===
-{{en-noun|optionalities}}
+{{en-noun|Optionalities}}
 # The potential for making additional choices which are available only after an initial choice.
 # {{finance|business}} The value of additional optional investment opportunities available only after having made an initial investment.
 #:''The short-term payoff for this is modest, but the '''optionality''' value is enormous.''
