--- a/en/p/PVC.4323.wikitext
+++ b/en/p/PVC.4323.wikitext
@@ -11,6 +11,7 @@
 {{trans-top|organic compound}}
 * Dutch: {{t-|nl|PVC}}
 {{trans-mid}}
+* Finnish: {{t|fi|PVC-muovi}}
 {{trans-bottom}}
 
 {{trans-top|medicine}}
