--- a/en/m/marten.8230.wikitext
+++ b/en/m/marten.8230.wikitext
@@ -36,7 +36,7 @@
 * Bosnian: {{t-|bs|kuna|f}}
 * [[Breton]]: [[mart]]
 * Bulgarian: {{t-|bg|бялка|f|tr=bjalka}}
-* [[Catalan]]: [[marta]]
+* [[Catalan]]: [[marta|f]]
 * Croatian: {{t-|hr|kuna|f}}
 * Czech: {{t-|cs|kuna|f}}
 * Danish: [[mår]]
