--- a/en/b/break.6806.wikitext
+++ b/en/b/break.6806.wikitext
@@ -161,6 +161,7 @@ The sense relating to a spell of weather is most likely to be used after a perio
 ====Translations====
 {{trans-top|intransitive: to end up in two or more pieces that cannot easily be reassembled}}
 * Albanian: {{t|sq|thyej}}
+* Albanian: {{t|sq|thyej}}
 * Arabic: {{Arab|[[كسر]]}} (kásara), {{Arab|انكسر}} (inkásara)
 * Armenian: [[ջարդվել]] (ǰardvel), [[կոտրվել]] (kotərvel)
 * [[Basque]]: {{t|eu|puskatu|xs=Basque}}, {{t|eu|hautsi|xs=Basque}}, {{t|eu|apurtu|xs=Basque}}
