--- a/en/c/consume.34056.wikitext
+++ b/en/c/consume.34056.wikitext
@@ -126,6 +126,7 @@ From {{etyl|la}} ''[[consumere]]''.
 # {{es-verb form of|ending=ir|mood=indicative|tense=present|pers=3|number=singular|[[consumir]]}}
 
 [[et:consume]]
+[[el:consume]]
 [[fa:consume]]
 [[fr:consume]]
 [[hy:consume]]
