--- a/en/b/bid.6797.wikitext
+++ b/en/b/bid.6797.wikitext
@@ -27,7 +27,7 @@ From {{etyl|ang}} verb ''[[biddan]]'' ‘ask, demand’. Conflation from {{etyl|
 * Bulgarian: {{t+|bg|заповядвам}}
 * Czech: {{t-|cs|žádat}}
 {{trans-mid}}
-* Dutch: {{t|nl|zeggen}}
+* Dutch: {{t|nl|zeggen}}, {{t|nl|vertellen}}
 * Finnish: {{t+|fi|pyytää}}, {{t+|fi|käskeä}}
 * Russian: [[приказывать]]
 {{trans-bottom}}
