--- a/en/b/break.6806.wikitext
+++ b/en/b/break.6806.wikitext
@@ -190,6 +190,7 @@ The sense relating to a spell of weather is most likely to be used after a perio
 * Latvian: {{t-|lv|salūzt|xs=Latvian}}, {{t-|lv|lūzt|xs=Latvian}}
 * Lithuanian: [[sulaužyti]]
 * Mongolian: {{t|mn|хагарах|tr=hagarah|sc=Cyrl|xs=Mongolian}}
+* [[Old Dutch]]: {{tø|odt|brecan}}
 * {{trreq|Old English}}
 * Persian: {{t|fa|خرد کردن|tr=xord kardan|xs=Persian}}, {{t+|fa|شکستن|tr=šekastan|xs=Persian}}
 * Polish: [[złamać się]] (two pieces), [[rozbić się]], [[połamać się]] (more pieces)
